<resources>
    <string name="app_name">Toolers</string>
    <string name="main_activity_title">選擇餐廳</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="restaurant_list_urls">http://172.104.58.179/api/restaurants</string>
    <string name="restaurant_urls">http://172.104.58.179/api/restaurants/id/</string>
    <string name="restaurant_addition">http://172.104.58.179/api/restaurants/addition</string>
    <string name="orders_cost">http://172.104.58.179/api/orders/cost</string>
    <string name="post_orders">http://172.104.58.179/api/orders</string>


    <string name="restaurant_activity_title">選擇餐點</string>
    <string name="add_to_cart">加到購物車</string>
    <string name="delete">刪除</string>
    <string name="num_of_food">數量</string>
    <string name="choose_num">選擇數量</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="order">開始點餐</string>
    <string name="zero">0</string>
    <string name="original_cost">原價:</string>
    <string name="total_cost">總計:</string>
    <string name="checkout">結帳</string>
    <string name="title_activity_checkout">結帳</string>
    <string name="choose_method">選擇結帳方法</string>
    <string name="cash_on_delivery">貨到付款</string>
    <string name="card">刷卡</string>
    <string name="user_phone">電話</string>
    <string name="user_name">領取人姓名</string>
    <string name="dorm_name">宿舍名稱</string>
    <string name="dorm_num">房號</string>
    <string name="finish">完成</string>
    <string name="user_data">領取人資料</string>

    <string-array name="payment_method">
        <item>貨到付款</item>
        <item>刷卡</item>
    </string-array>

    <string name="purchase">購買</string>
    <string name="payment">開始付款</string>
    <string name="address">宿舍名稱</string>
    <string name="name">名稱</string>
    <string name="information">填寫個人資料</string>
    <string name="credit_card_info">輸入信用卡資料</string>
    <string name="pay_now">立刻付款</string>
    <string name="room_number">宿舍房號</string>
</resources>
