<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/user_data_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/user_data"
        android:textSize="@dimen/restaurant_text_size_large"
        android:gravity="center"
        android:padding="10dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_data_text">

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/restaurant_text_size"
                android:inputType="textEmailAddress"
                android:hint="@string/user_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/user_phone_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_text_layout">

        <EditText
            android:id="@+id/user_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/restaurant_text_size"
            android:inputType="phone"
            android:hint="@string/user_phone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dorm_name_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_phone_text_layout">

        <EditText
            android:id="@+id/dorm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/restaurant_text_size"
            android:hint="@string/dorm_name"/>

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/dorm_num_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dorm_name_text_layout">

        <EditText
            android:id="@+id/dorm_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/restaurant_text_size"
            android:hint="@string/dorm_num"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/method_spinner_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dorm_num_text_layout">
        <Spinner
            android:id="@+id/method_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/payment_method"
            android:padding="5dp"/>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/finish"
        android:gravity="center"
        android:textSize="@dimen/restaurant_text_size"
        android:theme="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/method_spinner_card"
        android:layout_marginTop="20dp"
        android:text="@string/finish" />
</RelativeLayout>