<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_list_content_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone">
    <LinearLayout
        android:id="@+id/option_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:visibility="gone"
        android:orientation="vertical"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/number_of_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_of_food"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_alignParentBottom="true"
            android:textSize="@dimen/restaurant_text_size"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"/>

        <Button
            android:id="@+id/number_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/number_of_food"
            android:theme="@style/AppTheme.Button"
            android:textSize="@dimen/restaurant_text_size"
            android:text="@string/zero" />

        <Button
            android:id="@+id/add_to_cart"
            android:text="@string/add_to_cart"
            android:focusable="false"
            android:textSize="@dimen/restaurant_text_size"
            android:theme="@style/AppTheme.Button"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</LinearLayout>